--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -13,17 +13,13 @@
     "email": "Email",
     "password": "Password",
     "remember_me": "Remember me",
-    "forgot_password": "Forgot Password?",
+    "forgot": "Forgot?",
     "dont_have_an_account": "Don't have an account?",
     "register": "Register",
     "register_to_continue_using_the_app": "Register to continue using the app",
     "user_name": "User Name",
     "register_with_Google": "Register with Google",
     "welcome_to": "Welcome to"
-
-
-
-
   },
   "hint_text": {
     "enter_your_email": "Enter your email",
