--- a/assets/locales/ar_SY.json
+++ b/assets/locales/ar_SY.json
@@ -13,7 +13,7 @@
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
     "remember_me": "تذكرنى",
-    "forgot": "هل نسيت كلمة المرور؟",
+    "forgot": "هل نسيت؟",
     "dont_have_an_account": "ليس لديك حساب؟",
     "register": "قم بالتسجيل",
     "register_to_continue_using_the_app": "قم بالتسجيل لمواصلة استخدام التطبيق",
