--- a/assets/locales/ar_SY.json
+++ b/assets/locales/ar_SY.json
@@ -30,9 +30,28 @@
     "enter_password_confirmation": "أدخل تأكيد كلمة السر"
   },
   "error": {
-    "email_must_not_be_empty": "البريد الإلكتروني يجب أن لا يكون فارغاً",
-    "invalid_email_format": "البريد إلكتروني غير صالح"
-  },
+    "email_must_not_be_empty": "البريد الإلكتروني يجب ألا يكون فارغاً",
+    "invalid_email_format": "تنسيق البريد الإلكتروني غير صالح",
+    "name_must_not_be_empty": "الاسم يجب ألا يكون فارغاً",
+    "name_is_too_short": "الاسم قصير جداً",
+    "invalid_name": "أدخل اسماً صحيحاً",
+    "password_must_not_be_empty": "كلمة المرور يجب ألا تكون فارغة",
+    "password_too_short": "كلمة المرور قصيرة جداً",
+    "password_uppercase_required": "يجب أن تحتوي كلمة المرور على حرف كبير واحد على الأقل",
+    "password_lowercase_required": "يجب أن تحتوي كلمة المرور على حرف صغير واحد على الأقل",
+    "password_number_required": "يجب أن تحتوي كلمة المرور على رقم واحد على الأقل",
+    "password_special_char_required": "يجب أن تحتوي كلمة المرور على رمز خاص واحد على الأقل",
+    "phone_must_not_be_empty": "رقم الهاتف يجب ألا يكون فارغاً",
+    "invalid_phone_number": "أدخل رقم هاتف صالحاً",
+    "number_must_not_be_empty": "الرقم يجب ألا يكون فارغاً",
+    "invalid_number": "أدخل رقماً صالحاً",
+    "reset_code_must_not_be_empty": "رمز إعادة التعيين يجب ألا يكون فارغاً",
+    "reset_code_invalid_length": "يجب أن يكون رمز إعادة التعيين مكوناً من 8 أحرف",
+    "must_not_be_empty": "يجب ألا يكون فارغاً",
+    "please_confirm_your_password": "يرجى تأكيد كلمة المرور",
+    "passwords_do_not_match": "كلمتا المرور غير متطابقتين"
+  }
+,
   "buttons": {
     "login": "تسجيل الدخول",
     "register": "تسجيل",
