--- a/assets/locales/ar_SY.json
+++ b/assets/locales/ar_SY.json
@@ -27,8 +27,8 @@
     "enter_your_email": "أدخل البريد الإلكتروني",
     "enter_your_password": "أدخل كلمة السر",
     "enter_your_user_name": "أدخل اسم المستخدم",
-    "hint_text_enter_your_first_name": "الاسم الاول",
-    "hint_text_enter_your_last_name": "العائلة",
+    "enter_your_first_name": "الاسم الاول",
+    "enter_your_last_name": "العائلة",
     "enter_password_confirmation": "أدخل تأكيد كلمة السر"
   },
   "error": {
