--- a/assets/locales/ar_SY.json
+++ b/assets/locales/ar_SY.json
@@ -2,7 +2,6 @@
   "welcome": "أهلاً بك",
   "language": "ar",
   "labels": {
-
     "or": "أو",
     "login": "تسجيل الدخول",
     "login_with_Google": "تسجيل الدخول باستخدام غوغل",
@@ -22,8 +21,63 @@
     "register_with_Google": "تسجيل الدخول باستخدام Google",
     "welcome_to": "أهلاً بك في",
     "first_name": "الاسم الأول",
-    "last_name": "الاسم الثاني"
+    "last_name": "الاسم الثاني",
+    "profile": "الملف الشخصي",
+    "view_history": "عرض السجل",
+    "no_profile_data": "لا توجد بيانات للملف الشخصي",
+    "no_phone": "لا يوجد رقم هاتف",
+    "no_address": "لا يوجد عنوان",
+    "seller_account": "حساب بائع",
+    "reset_password": "إعادة تعيين كلمة المرور",
+    "current_password": "كلمة المرور الحالية",
+    "new_password": "كلمة المرور الجديدة",
+    "confirm_password": "تأكيد كلمة المرور",
+    "phone_number": "رقم الهاتف",
+    "address": "العنوان",
+    "properties_you_might_like": "عقارات قد تعجبك",
+    "start_your_property_journey": "ابدأ رحلتك العقارية",
+    "top_service_providers": "أفضل مقدمي الخدمات",
+    "step_into_services": "ادخل إلى عالم الخدمات",
+    "welcome_to_sakkeni": "أهلاً بك في سكني👋",
+    "find_your_dream_home": "ابحث عن منزل أحلامك",
+    "guest_user": "ضيف",
+    "language": "اللغة",
+    "services_for_you": "خدمات من أجلك",
+    "favorite_properties": "العقارات المفضلة",
+    "your_history": "سجلك",
+    "become_a_seller": "كن بائعاً!",
+    "commercial_account": "حساب تجاري",
+    "personal_account": "حساب شخصي",
+    "become_a_service_provider": "كن مزود خدمة!",
+    "subscription_plan": "خطة الاشتراك",
+    "select_services": "اختر الخدمات",
+    "unnamed_plan": "خطة غير مسمى",
+    "note": "ملاحظة",
+    "add_new_property": "إضافة عقار جديد",
+    "images_required": "الصور مطلوبة",
+    "country_name": "اسم الدولة",
+    "city_name": "اسم المدينة",
+    "exposure": "الاتجاه",
+    "north": "شمال",
+    "south": "جنوب",
+    "east": "شرق",
+    "west": "غرب",
+    "northeast": "شمال شرق",
+    "northwest": "شمال غرب",
+    "southeast": "جنوب شرق",
+    "southwest": "جنوب غرب",
+    "missing_field": "حقل مفقود",
+    "missing_location": "الموقع مفقود"
 
+  },
+  "drawer": {
+    "my_properties": "عقاراتي",
+    "my_services": "خدماتي",
+    "my_requests": "طلباتي",
+    "requests_to_do": "طلبات للقيام بها",
+    "messages": "الرسائل",
+    "settings": "الإعدادات",
+    "dark_mode": "الوضع الداكن"
   },
   "hint_text": {
     "enter_your_email": "أدخل البريد الإلكتروني",
@@ -31,7 +85,12 @@
     "enter_your_user_name": "أدخل اسم المستخدم",
     "enter_your_first_name": "الاسم الاول",
     "enter_your_last_name": "العائلة",
-    "enter_password_confirmation": "أدخل تأكيد كلمة السر"
+    "enter_password_confirmation": "أدخل تأكيد كلمة السر",
+    "search": "بحث",
+    "write_about_services": "اكتب شيئًا عن خدماتك...",
+    "type_an_address": "اكتب عنوانًا",
+    "choose": "اختر"
+
   },
   "error": {
     "email_must_not_be_empty": "البريد الإلكتروني يجب ألا يكون فارغاً",
@@ -53,9 +112,13 @@
     "reset_code_invalid_length": "يجب أن يكون رمز إعادة التعيين مكوناً من 8 أحرف",
     "must_not_be_empty": "يجب ألا يكون فارغاً",
     "please_confirm_your_password": "يرجى تأكيد كلمة المرور",
-    "passwords_do_not_match": "كلمتا المرور غير متطابقتين"
-  }
-,
+    "passwords_do_not_match": "كلمتا المرور غير متطابقتين",
+    "no_results_found": "لم يتم العثور على نتائج",
+    "no_properties_found": "لم يتم العثور على عقارات.",
+    "no_categories_available": "لا توجد فئات متاحة"
+
+
+  },
   "buttons": {
     "login": "تسجيل الدخول",
     "register": "تسجيل",
@@ -63,6 +126,58 @@
     "sign_in": "تسجيل الدخول",
     "logout": "تسجيل الخروج",
     "sign_in_fb": "تسجيل الدخول عن طريق Facebook",
-    "sign_in_google": "تسجيل الدخول عن طريق Google"
+    "sign_in_google": "تسجيل الدخول عن طريق Google",
+    "edit_profile": "تعديل الملف الشخصي",
+    "reset_password": "إعادة تعيين كلمة المرور",
+    "save_changes": "حفظ التغييرات",
+    "view_properties": "عرض العقارات",
+    "add_new_property": "أضف عقاراً جديداً",
+    "more_service_providers": "المزيد من مقدمي الخدمات",
+    "view_services": "عرض الخدمات",
+    "add_new_service": "أضف خدمة جديدة",
+    "upgrade_to_service_provider": "الترقية إلى مزود خدمة",
+    "cancel": "إلغاء",
+    "upgrade_to_seller": "الترقية إلى بائع",
+    "become_a_seller": "كن بائعاً!",
+    "commercial_account": "حساب تجاري",
+    "become_a_service_provider": "كن مزود خدمة!",
+    "subscription_plan": "خطة الاشتراك",
+    "select_services": "اختر الخدمات",
+    "unnamed_plan": "خطة غير مسمى",
+    "personal_account": "حساب شخصي",
+    "upgrade": "ترقية",
+    "previous": "السابق",
+    "next": "التالي"
+
+
+  },
+  "tabs": {
+    "for_rent": "للإيجار",
+    "for_sale": "للبيع",
+    "off_plan": "على الخارطة"
+  },
+  "messages": {
+    "view_history_description": "شاهد نشاطك السابق بسهولة",
+    "check_services_provided": "تحقق من الخدمات التي تقدمها",
+    "review_listed_properties": "راجع العقارات التي قمت بإدراجها",
+    "upgrade_to_service_provider_required": "يجب عليك الترقية إلى مزود خدمة للوصول إلى هذه الميزة.",
+    "upgrade_to_seller_required": "يجب عليك الترقية إلى بائع للوصول إلى هذه الميزة.",
+    "choose_account_type": "اختر نوع الحساب الذي يناسب احتياجات البيع الخاصة بك.",
+    "commercial_account_description": "للوكالات العقارية والمطورين والشركات.",
+    "personal_account_description": "للأفراد الذين يتطلعون لبيع أو تأجير عقاراتهم الخاصة.",
+    "choose_plan_and_services": "اختر خطة الاشتراك، والخدمات، وأضف وصفًا.",
+    "no_subscription_plans_available": "لا توجد خطط اشتراك متاحة.",
+    "no_services_available": "لا توجد خدمات متاحة.",
+    "select_at_least_3_images": "الرجاء اختيار 3 صور على الأقل.",
+    "upload_at_least_3_photos": "ارفع 3 صور على الأقل",
+    "upload_at_least_3_images_before_continuing": "الرجاء رفع 3 صور على الأقل قبل المتابعة.",
+    "upload_1_video_before_continuing": "الرجاء رفع فيديو واحد قبل المتابعة.",
+    "no_countries_found": "لم يتم العثور على دول",
+    "select_a_country": "الرجاء اختيار دولة.",
+    "select_a_city": "الرجاء اختيار مدينة.",
+    "select_at_least_one_exposure": "الرجاء اختيار اتجاه واحد على الأقل.",
+    "enter_the_address": "الرجاء إدخال العنوان.",
+    "pick_a_location": "الرجاء تحديد موقع على الخريطة."
   }
+
 }
