--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -21,16 +21,75 @@
     "register_with_Google": "Regist0er with Google",
     "welcome_to": "Welcome to",
     "first_name": "First Name",
-    "last_name": "Last Name"
+    "last_name": "Last Name",
+    "reset_password": "Reset Password",
+    "current_password": "Current Password",
+    "new_password": "New Password",
+    "confirm_password": "Confirm Password",
+    "profile": "Profile",
+    "view_history": "View History",
+    "no_profile_data": "No profile data",
+    "no_phone": "No Phone",
+    "no_address": "No Address",
+    "seller_account": "Seller Account",
+    "phone_number": "Phone Number",
+    "address": "Address",
+    "properties_you_might_like": "Properties You Might Like",
+    "start_your_property_journey": "Start Your Property Journey",
+    "top_service_providers": "Top Service Providers",
+    "step_into_services": "Step Into Services",
+    "welcome_to_sakkeni": "Welcome to Sakkeni👋",
+    "find_your_dream_home": "Find Your Dream Home",
+    "guest_user": "Guest User",
+    "language": "Language",
+    "services_for_you": "Services for you",
+    "favorite_properties": "Favorite Properties",
+    "your_history": "Your History",
+    "become_a_seller": "Become a Seller!",
+    "commercial_account": "Commercial Account",
+    "personal_account": "Personal Account",
+    "become_a_service_provider": "Become a Service Provider!",
+    "subscription_plan": "Subscription Plan",
+    "select_services": "Select Services",
+    "unnamed_plan": "Unnamed Plan",
+    "note": "Note",
+    "add_new_property": "Add New Property",
+    "images_required": "Images Required",
+    "video_required": "Video Required",
+    "country_name": "Country Name",
+    "city_name": "City Name",
+    "exposure": "Exposure",
+    "north": "North",
+    "south": "South",
+    "east": "East",
+    "west": "West",
+    "northeast": "Northeast",
+    "northwest": "Northwest",
+    "southeast": "Southeast",
+    "southwest": "Southwest",
+    "missing_field": "Missing Field",
+    "missing_location": "Missing Location"
+  },
+  "drawer": {
+    "my_properties": "My Properties",
+    "my_services": "My Services",
+    "my_requests": "My Requests",
+    "requests_to_do": "Requests to do",
+    "messages": "Messages",
+    "settings": "Settings",
+    "dark_mode": "Dark Mode"
   },
   "hint_text": {
     "enter_your_email": "Enter your email",
     "enter_your_password": "Enter your password",
     "enter_your_user_name": "Enter your user name",
     "enter_password_confirmation": "Enter password confirmation",
-
+    "search": "Search",
     "enter_your_first_name": "First Name",
-    "enter_your_last_name": "Last Name"
+    "enter_your_last_name": "Last Name",
+    "write_about_services": "Write something about your services...",
+    "type_an_address": "Type an address",
+    "choose": "Choose"
 
   },
   "error": {
@@ -53,17 +112,71 @@
     "reset_code_invalid_length": "Reset code must be 8 characters long",
     "must_not_be_empty": "It must not be empty",
     "please_confirm_your_password": "Please confirm your password",
-    "passwords_do_not_match": "Passwords do not match"
+    "passwords_do_not_match": "Passwords do not match",
+    "profile": "Profile",
+    "view_history": "View History",
+    "no_profile_data": "No profile data",
+    "no_phone": "No Phone",
+    "no_address": "No Address",
+    "seller_account": "Seller Account",
+    "no_results_found": "No results found",
+    "no_properties_found": "No properties found.",
+    "no_categories_available": "No categories available"
+
+
   }
 ,
   "buttons": {
     "login": "Login",
     "register": "Register",
     "sign_up": "Sign up",
-
+    "edit_profile": "Edit Profile",
+    "reset_password": "Reset Password",
     "sign_in": "Sign-in",
     "logout": "Logout",
     "sign_in_fb": "Sign-in with Facebook",
-    "sign_in_google": "Sign-in with Google"
+    "sign_in_google": "Sign-in with Google",
+    "save_changes": "Save Changes",
+    "view_properties": "View Properties",
+    "add_new_property": "Add New Property",
+    "more_service_providers": "More Service Providers",
+    "view_services": "View Services",
+    "add_new_service": "Add New Service",
+    "upgrade_to_service_provider": "Upgrade to Service Provider",
+    "cancel": "Cancel",
+    "upgrade_to_seller": "Upgrade to Seller",
+    "upgrade": "Upgrade",
+    "previous": "Previous",
+    "next": "Next"
+
+
+  },
+  "tabs": {
+    "for_rent": "For Rent",
+    "for_sale": "For Sale",
+    "off_plan": "Off plan"
+  },
+  "messages": {
+    "view_history_description": "View your past activity easily",
+    "check_services_provided": "Check the services you provide",
+    "review_listed_properties": "Review your listed properties",
+    "upgrade_to_service_provider_required": "You must upgrade to a Service Provider to access this feature.",
+    "upgrade_to_seller_required": "You must upgrade to a seller to access this feature.",
+    "choose_account_type": "Choose the account type that best fits your selling needs.",
+    "commercial_account_description": "For real estate agencies, developers, and businesses.",
+    "personal_account_description": "For individuals looking to sell or rent their own properties.",
+    "choose_plan_and_services": "Choose your subscription plan, select services, and add a description.",
+    "no_subscription_plans_available": "No subscription plans available.",
+    "no_services_available": "No services available.",
+    "select_at_least_3_images": "Please select at least 3 images.",
+    "upload_at_least_3_photos": "Upload at least 3 photos",
+    "upload_at_least_3_images_before_continuing": "Please upload at least 3 images before continuing.",
+    "upload_1_video_before_continuing": "Please upload 1 video before continuing.",
+    "no_countries_found": "No countries found",
+    "select_a_country": "Please select a country.",
+    "select_a_city": "Please select a city.",
+    "select_at_least_one_exposure": "Please select at least one exposure.",
+    "enter_the_address": "Please enter the address.",
+    "pick_a_location": "Please pick a location on the map."
   }
 }
